# FainAI

./: README.md
backend/: chat.py  make_dbs.py  procd.txt  pyproject.toml
data-extraction/: .gitignore  package.json  pnpm-lock.yaml  scrape.ts
data-extraction/captions/: 00f708fe-d117-4649-941d-b0ce014752c3.json  03a397f4-d280-441f-a282-b0ce01475469.json  0dab34b6-48d5-469f-b7c4-b0ce01475409.json  1115930f-608e-4337-9bb6-b0ce01475259.json  16774fc1-4677-4204-b4f3-b0ce0147521c.json  218ccb5a-3e03-428f-8e98-b0ce01475439.json  40842ba8-1e69-4538-8382-b0ce014752e0.json  5e1e3653-e61c-44ec-a2b4-b0ce014752a9.json  7c304b3d-1cc2-4042-a5cb-b0ce01475483.json  7cd0571b-9d1c-4ca9-b110-b0ce0147517d.json  8dca4545-a6c7-4faa-8def-b0ce014753c6.json  984f807a-035d-4879-b1cb-b0ce0147534d.json  986ca737-cc63-4d3d-a629-b0ce014753ea.json  aebc8619-bc77-408a-bcd4-b0ce01475451.json  aec3be47-2b3d-4380-a8a6-b0ce014751a3.json  b9dc8fe7-ecfb-448b-aaf9-b0ce01475302.json  bde91a21-179a-4f36-a8bb-b0ce014751e8.json  bfbe30da-fe4a-4ebf-b6b1-b0ce01475202.json  d3bc0d93-3e40-4a70-ad3e-b0ce01475236.json  d5ea30b3-73c5-41cf-8de1-b0ce01475422.json  dced0db0-7937-44bc-848e-b0ce01475278.json  e7ce8e38-399d-4284-9419-b0ce01475325.json  e8e56b4a-bd26-429e-8c24-b0ce01475132.json  f16ea504-6e25-443f-b5b2-b0ce014751c9.json  f4c7c286-0cb9-4c0c-a715-b0ce01475291.json
data-extraction/post_proc/: 00f708fe-d117-4649-941d-b0ce014752c3.json  16774fc1-4677-4204-b4f3-b0ce0147521c.json  218ccb5a-3e03-428f-8e98-b0ce01475439.json  (+10 more)
frontend-fainai/: .eslintrc.json  package.json  pnpm-lock.yaml
(+4 files in other folders)
